--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: node_js
 node_js: node
 services:
 - mongodb
-before_script: chmod 0777 ./node_modules/.bin/mocha 
+before_script: chmod 0777 ./node_modules/.bin/mocha
+before_script: - npm install mongoose
