--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ node_js: node
 services:
 - mongodb
 before_script: chmod 0777 ./node_modules/.bin/mocha
-before_script: - npm install mongoose  
+# before_script: - npm install mongoose
