--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "mocha": "^5.0.5"
+  },
+  "dependencies": {
+    "mongoose": "^5.0.12"
   }
 }
