--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "faker": "^4.1.0",
-    "mongoose": "^5.0.12"
+    "mongoose": "^5.0.12",
+    "uuid": "^3.2.1"
   }
 }
